<resources>
    <string name="app_name">Zenite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Bem vindo</string>
    <string name="invalid_username">Nome de usuário invaldo</string>
    <string name="invalid_password">Senha deve ter mais de 5 caracteres</string>
    <string name="login_failed">Falha no login</string>
    <string name="mensagem_erro_lista">Ocorreu um erro</string>
    <string name="motoristas">Motoristas</string>
    <string name="motorista_empty">Não existem motoristas atrelados a esta linha</string>
    <string name="mensagem_escaner">Escaneie o QR Code do motorista</string>
    <string name="qr_code">QR Code</string>
    <string name="dashboard">Dashboard</string>
    <string name="viagens">Viagens</string>
    <string name="logout">Logout</string>
    <string name="scanner">Scanner</string>
    <string name="scanner_titulo">INICIAR OU FINALIZAR VIAGEM</string>
    <string name="scanner_descricao">Clique no botão abaixo para escanear o QR Code do motorista que fará com que uma viagem seja iniciada ou finalizada.</string>
    <string name="scanner_botao_texto">escanear QR Code</string>
    <string name="login">Entrar</string>
    <string name="usuario_invalido"> Usuário não encontrado</string>
    <string name="erro_autentificacao">O login não pode ser efetuado, tente novamente.</string>
    <string name="sem_acesso">Seu usuário não tem acesso ao aplicativo.</string>
    <string name="erro_ao_carregar">Houve um erro ao carregar seus dados.</string>
    <string name="motorista_welcome">Olá, %1$s você está alocado na linha.</string>
    <string name="lista_vazia">Não existem dados no banco de dados</string>
    <string name="bem_vindo">BEM VINDO</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="senha_titulo">SENHA</string>
    <string name="senha">Senha</string>
    <string name="email_titulo">E-MAIL</string>
    <string name="email">E-mail</string>
    <string name="bt_enviar">Enviar</string>
    <string name="erro_informar_email">Informe um e-mail válido!</string>
    <string name="recuperacao_email_valido">Você receberá um e-mail para recuperação de senha.</string>
    <string name="mensagem_esqueceu_senha">Digite seu email no campo abaixo e você recebera um email para renovar sua senha.</string>
    <string name="login_error_campo">Informe seu email</string>
    <string name="senha_error_campo">Informe sua senha</string>
    <string name="iniciar_viagem">Iniciar Viagem</string>
    <string name="finalizar_viagem">Finalizar Viagem</string>
    <string name="erro_escanear">Ocorreu um erro ao escanear este QR Code, tente novamente</string>
    <string name="viagem_iniciada">VIAGEM INICIADA!</string>
    <string name="viagem_finalizada">VIAGEM FINALIZADA!</string>
    <string name="erro_viagem">Ocorreu um erro ao realizar a ação, tente novamente</string>
    <string name="acao_erro">A ação não foi realizada</string>
    <string name="acao_sucesso">Ação realizada com sucesso!</string>
    <string name="acao_nao_desfeita">Essa ação não pode ser desfeita</string>
    <string name="permissao_camera_concedida">Permissão da camera concedida</string>
    <string name="permissao_camera_negada">Permissão da camera negada</string>
    <string name="mensagem_passageiros_error">Informe a quantidade de passageiros desta viagem</string>
    <string name="passageiros_titulo">Adicionar a quantidade de passageiros</string>
    <string name="cronorgrma_geral">Cronograma Geral</string>
    <string name="linhas_titulo">Linhas</string>
    <string name="seu_qr_code">Seu código QR</string>
    <string name="historico_viagens">Histórico de viagens</string>
    <string name="diario">Diário</string>
    <string name="semanal">Geral</string>
    <string name="em_viagem">Em Viagem</string>
    <string name="alterar_intervalo">Esta ação não pode ser desfeita. Deseja continuar?</string>

    <string name="telefone">Telefone</string>
    <string name="nome">Nome</string>
    <string name="fiscal_da_linha">Fiscal da Linha</string>
    <string name="modelo">Modelo</string>
    <string name="placa">Placa</string>
    <string name="nibus_alocado">Ônibus alocado</string>
    <string name="duracao">Duração</string>
    <string name="comeco">Começo</string>
    <string name="sua_viagem_atual">Sua viagem atual</string>
    <string name="placa_do_onibus">Placa do Ônibus</string>
    <string name="ver_tudo">ver tudo</string>
    <string name="motorista">motorista</string>
    <string name="status">status</string>
    <string name="sum_rio_das_viagens">SUMÁRIO DAS VIAGENS</string>
    <string name="total">Total</string>
    <string name="media_de_tempo">Media de tempo</string>
    <string name="faltas">Faltas</string>
    <string name="viagens_diarias">Diário</string>
    <string name="viagens_diaria_descricao">Viagens de hoje</string>
    <string name="viagens_descricao">Viagens antigas</string>
    <string name="viagens_semanal">Semanal</string>
    <string name="qrcode_descricao">Esse código identifica você e seu ônibus. Através dele que o fiscal irá marcar o começo e o final de sua viagem.</string>
    <string name="sair_da_conta">SAIR DA CONTA</string>
    <string name="suporte">suporte</string>
    <string name="all_rights_reserved">todos os direitos reservados</string>
    <string name="app_version">versao 0.0.1</string>
    <string name="cronograma_geral">Cronograma geral</string>
    <string name="cronograma_geral_descricao">Viagens de hoje</string>
    <string name="linhas">Linhas</string>
    <string name="linhas_descricao">Todas as linhas que você gerencia</string>
    <string name="cronograma_descricao">Na lista abaixo está o cronograma da próxima hora das linhas que você gerencia</string>
    <string name="qtd_titulo">QUANTIDADE DE PASSAGEIROS</string>
    <string name="quantidade">quantidade</string>
    <string name="salvar_btn">SALVAR</string>
    <string name="linha">Linha</string>
    <string name="cronograma">Cronograma</string>
    <string name="cronograma_title">CRONOGRAMA</string>
    <string name="tempo_btn">Alterar intervalo de tempo</string>
    <string name="previsto">PREVISTO</string>
    <string name="alterar_intervalo_page">ALTERAR INTERVALO</string>
    <string name="alterar_descricao">Digite o novo intervalo de tempo entre a saída do ônibus</string>
    <string name="tempo_hint">Digite o intervalo de tempo</string>
    <string name="alterar_btn">Alterar</string>
    <string name="erro_alterar_intervalo">Houve um erro ao alterar o intervalo</string>
    <string name="input_alterar_vazio">Informe o novo intervalo em minutos!</string>
</resources>