<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".telas.motorista.fragments.MotoristaViagens">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabViagem"
        android:background="@color/azulClaro"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:tabMode="fixed"
    >

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/viagens_diaria_descricao"
        android:text="@string/viagens_diarias"
        />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/viagens_descricao"
        android:text="@string/viagens_semanal"
        />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_main"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>