<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeCronograma"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telas.fiscal.LinhaCronograma">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/azulClaro"
                app:navigationIcon="@drawable/ic_voltar"
                app:title="Cronograma"
                app:titleTextColor="@color/corPrimaria" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/titulo_tela"
            style="@style/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="25dp"
            android:text="@string/cronograma_title"
            android:textAllCaps="true"
            android:textColor="@color/corPrimaria" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botao"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:onClick="alterarIntervalo"
            android:text="@string/tempo_btn"
            app:strokeColor="@color/corPrimaria" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/header1"
                style="@style/TextoBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginEnd="60dp"
                android:text="@string/previsto"
                android:textAllCaps="true"
                android:textColor="@color/corPrimaria"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/header2"
                style="@style/TextoBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/motorista"
                android:textAllCaps="true"
                android:textColor="@color/corPrimaria"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/header3"
                style="@style/TextoBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:text="status"
                android:textAllCaps="true"
                android:textColor="@color/corPrimaria"
                android:textSize="12dp" />
        </GridLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/erroCronograma"
            style="@style/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/mensagem_erro_lista"
            android:textColor="@color/preto"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/loaderCro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="start"
            android:visibility="gone" />


        <TextView
            android:id="@+id/cronogramaVazio"
            android:visibility="gone"
            style="@style/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:textColor="@color/preto"
            android:text="@string/lista_vazia" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listViagens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>