<?xml version="1.0" encoding="utf-8"?><!--<androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/swipeCronogramaGeral"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".telas.fiscal.fragments.dashboard.CronogramaGeral">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    tools:context=".telas.fiscal.fragments.dashboard.CronogramaGeral">


    <TextView
        style="@style/Texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/cronograma_descricao" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/erroCronogramaGeral"
        style="@style/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/mensagem_erro_lista"
        android:textColor="@color/preto"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/loaderCroGeral"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cronogramaVazio"
        style="@style/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/lista_vazia"
        android:textColor="@color/preto"
        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCronograma"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />
</LinearLayout><!--</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->